alignment issue fixed

--- a/src/Components/Layout/Header/Header.scss
+++ b/src/Components/Layout/Header/Header.scss
@@ -26,7 +26,7 @@ header {
       width: 100%;
       @media screen and (min-width: 768px) and (max-width: 1024px) {
         .list-n {
-          width: 105%;
+          width: 110%;
         }
         
       }
