--- a/src/Components/Layout/YojanaFilter/YojanaFilter.scss
+++ b/src/Components/Layout/YojanaFilter/YojanaFilter.scss
@@ -12,7 +12,7 @@
   .div-formik {
     padding: 0 70px;
     @media screen and (max-width: 1024px) {
-      padding: 0 35px;
+      padding: 0 25px;
     }
     .floating-input {
       text-align: left;
